--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFF" />
     <meta
       name="description"
-      content="Качественные товары по доступным ценам!"
+      content="Интернет-магазин"
     />
-    <title>Интернет Магазин PIT</title>
+    <title>Скинали</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
